package com.example.codepilotunittest.core;

public class User {
    public void provideMethodOrClassOrProject() {
        // Method implementation
    }

    public void provideDirectives() {
        // Method implementation
    }
}
