@startuml

package core {
    class JUnitTest {
        -String methodName
        -Map<String, Object> testInput
        -Object expectedOutput

        +boolean runTest()
    }

    class JUnitTestGenerator {
        +void generateJUnitTests(Class<?> clazz, TestCases testCases, List<Directive> directives)
        +String generateJUnitTestForTestCase(Class<?> clazz, TestCase testCase, List<Directive> directives)
        +String formatParameters(Map<String, Object> params)
        +void writeToFile(String fileName, String content)
    }

    class Parameter {
        -String name
        -Class<?> type

        +String getName()
        +Class<?> getType()
    }

    class TestCase {
        -Map<String, Object> parameters
        -Object expectedResult

        +void setParameter(String name, Object value)
        +void setExpectedResult(Object result)
    }

    class TestCases {
        -List<TestCase> testCaseList

        +void addTestCase(TestCase testCase)
    }

    class User {
        +void provideMethodOrClassOrProject()
        +void provideDirectives()
    }

    JUnitTestGenerator --> JUnitTest : returns
    JUnitTestGenerator ..> TestCases : uses
    TestCase *.. Parameter :contains
    TestCases *.. TestCase :contains
}

@enduml
